--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "AT Mulyana <atmulyana@yahoo.com>",
   "license": "MIT",
   "repository": "https://github.com/atmulyana/react-native-select",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "react-native",
     "select",
